# cognition-rust

./: #03c7#  .gitignore  Cargo.toml  LICENSE  README.md  cachegrind.out.31381  cachegrind.out.6002  cognition.scm  cogsh.scm  flake.nix  test.txt
coglib/: #script-example.cog#  #script-init.cog#  .#script-example.cog  bootstrap-file.cog  boottest.cog  brainfuck.cog  common-fllibs.cog  delims-only-boottest.cog  env.cog  example_serde_load_file.json  graphemes.cog  help.cog  multi.cog  multithreading-test.cog  multithreading.cog  newstdquote.cog  os.cog  process.cog  quine.cog  repl.cog  repl_state.json  script-example.cog  script-init.cog  script-init.cog~  simple-repl.cog  std.cog  stdbootstrap.cog  stdlib.cog  stdnamespace.cog  stdprefix.cog  stdquote.cog  stdrepl.cog  stuff  thread-repl-demo-instructions.txt  time.cog
coglib/baremetal/: repl.cog
coglib/dialects/: brainfuck.cog
coglib/examples/: bootstrap-file.cog  common-fllibs.cog  script.cog
coglib/legacy/: quine.cog  stdcombinators.cog  stdlib.cog
coglib/std/: .#namespace.cog  bootstrap.cog  fllib.cog  namespace.cog  prefix.cog  quote.cog  repl.cog
coglib/utils/: cogsh.cog  repl.cog
doc/: multithreading-demo.org
fllib/: multithreading.rs
fllib/env/: Cargo.toml
fllib/graphemes/: Cargo.toml
fllib/multithreading/: .#03c3  Cargo.toml
fllib/os/: Cargo.toml
macros/: Cargo.toml
scripts/: cognition-repl.sh  cogsh.sh
src/: #lib.rs#  #mai#  #main#  #math#  .#ma03c4  .#mai  .#main  .#math  builtins.rs  cognition.rs  lib.rs  ma03c4  macros.rs  main.rs  math.rs  pool.rs  serde.rs  tree.rs
(+28 files in other folders)
