[workspace]

[package]
name = "cognition"
version = "0.1.1"
edition = "2021"
description = "Rust implementation of the Cognition programming language"

[lib]
name = "cognition"
path = "src/lib.rs"

[[bin]]
name = "crank"
path = "src/main.rs"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.1"
