[workspace]
members = ["macros"]

[package]
name = "cognition"
version = "0.3.0"
edition = "2021"
description = "Rust implementation of the Cognition programming language"

[lib]
name = "cognition"
path = "src/lib.rs"

[[bin]]
name = "crank"
path = "src/main.rs"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4.1"
cognition-macros = { version = "=0.1.0", git = "https://github.com/metacrank/cognition-rust.git" }